# EuljiroWorship

./: .gitignore  EuljiroWorship.py  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-sphinx-to-pages-repo.yml
controller/: slide_controller.py
controller/helper/: verse_interruptor.py
controller/ui/: emergency_caption_dialog.py  slide_controller_ui_builder.py
controller/utils/: emergency_caption_handler.py  emergency_slide_factory.py  interruptor_watcher.py  keyword_highlight_delegate.py  keyword_result_model_light.py  slide_controller_data_manager.py  slide_file_watcher.py  slide_websocket_manager.py
core/config/: constants.py  paths.py  style_map.py
core/generator/: settings_generator.py  settings_last_path.py
core/plugin/: slide_controller_launcher.py
core/utils/: bible_data_loader.py  bible_keyword_searcher.py  bible_parser.py  logger.py
data/: 그리스어 신약 Textus Receptus (1884).json  라틴어 Latin Vulgate (405).json  아시아_중국어 简体和合本 (1919).json  아시아_중국어 繁體和合本 (1919).json
data/hymns/: hymn_001.json  hymn_002.json  hymn_003.json  hymn_004.json  hymn_005.json  hymn_006.json  hymn_007.json  hymn_008.json  hymn_009.json  hymn_010.json  hymn_011.json  hymn_012.json  hymn_013.json  hymn_014.json  hymn_015.json  hymn_016.json  hymn_017.json  hymn_018.json  hymn_019.json  hymn_020.json  hymn_021.json  hymn_022.json  hymn_023.json  hymn_024.json  hymn_025.json  hymn_026.json  hymn_027.json  (+618 more)
html/: overlay.html  overlay_hall.html  overlay_hall_1080.html
json/: settings.json  settings_last_path.json
server/: websocket_server.py
(+202 files in other folders)
