[project]
name = "EuljiroWorship"
version = "0.1.0"
description = "Real-time worship slide generator and controller with emergency caption support"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Benjamin Jaedon Choi", email = "euljirochurch@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
    "PySide6",
    "websocket-client",
    "watchdog"
]

[tool.setuptools]
packages = [
    "controller",
    "core",
    "server"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"